--- a/demo.ipynb
+++ b/demo.ipynb
@@ -14,13 +14,13 @@
     "| Environment | Since | PYPL [%] |\n",
     "|-------------|-------|----------|\n",
     "| FORTRAN     | 1957  | --.--    |\n",
-    "| Matlab      | ~1970 | 1.61     |\n",
-    "| C++         | 1985  | 6.64     |\n",
-    "| Python      | 1991  | 28.34    |\n",
-    "| R           | 1993  | 3.98     |\n",
-    "| Julia       | 2012  | 0.24     |\n",
+    "| Matlab      | ~1970 | 1.60     |\n",
+    "| C++         | 1985  | 6.76     |\n",
+    "| Python      | 1991  | 27.99    |\n",
+    "| R           | 1993  | 4.45     |\n",
+    "| Julia       | 2012  | 0.35     |\n",
     "\n",
-    "Taken from [PopularitY of Programming Language (PYPL)](https://pypl.github.io/PYPL.html) on Dec 2, 2022.\n",
+    "Taken from [PopularitY of Programming Language (PYPL)](https://pypl.github.io/PYPL.html) on Nov 11, 2023.\n",
     "(Not specific for computational science & engineering.)"
    ]
   },
@@ -33,7 +33,7 @@
     }
    },
    "source": [
-    "### Questionaire in Physics and Astronomy (2019)\n",
+    "## Questionaire in Physics and Astronomy (2019)\n",
     "\n",
     "<img src=\"importance_sub_prog.png\" width=900 />"
    ]
@@ -47,11 +47,11 @@
     }
    },
    "source": [
-    "### Compiled languages (FORTRAN, C++, C, ...)\n",
+    "## Compiled languages (FORTRAN, C++, C, ...)\n",
     "\n",
     "- **Efficient** computation\n",
     "\n",
-    "### Interpreted languages (Python, Matlab, R, ...)\n",
+    "## Interpreted languages (Python, Matlab, R, ...)\n",
     "\n",
     "- **Slower execution**, yet easily circumvented\n",
     "- **Rapid** development: write code and execute\n",
@@ -67,14 +67,14 @@
     }
    },
    "source": [
-    "### Why is Python popular?\n",
+    "## Why is Python popular?\n",
     "\n",
     "1. **Easy** to learn\n",
     "1. **Open source** (free): transparency and reproducibility\n",
     "1. Many **libraries** (e.g. computational sciences)\n",
     "1. **Mature** en general purpose\n",
     "\n",
-    "### Why is Matlab (less) popular?\n",
+    "## Why is Matlab (less) popular?\n",
     "\n",
     "1. **Early** in the game (1970)\n",
     "1. **Vendor lock-in**: some software only works with Matlab\n",
@@ -91,7 +91,7 @@
     }
    },
    "source": [
-    "### Summary\n",
+    "## Summary\n",
     "\n",
     "Software tools for computer simulations:\n",
     "- Many languages\n",
@@ -129,7 +129,7 @@
     "tags": []
    },
    "source": [
-    "### Data types\n",
+    "## Data types\n",
     "\n",
     "```octave\n",
     "% Matlab has flexible types.\n",
@@ -161,7 +161,7 @@
     "tags": []
    },
    "source": [
-    "### No semicolons `;` in Python\n",
+    "## No semicolons `;` in Python\n",
     "\n",
     "```octave\n",
     "% In Matlab, use semicolons to avoid unwanted output.\n",
@@ -195,7 +195,7 @@
     "tags": []
    },
    "source": [
-    "### Python loops look very different\n",
+    "## Python loops look very different\n",
     "\n",
     "- No `end` statement, indentation (4 spaces) instead.\n",
     "- `in` syntax.\n",
@@ -262,7 +262,7 @@
     "tags": []
    },
    "source": [
-    "### No built-in (useful) arrays in Python\n",
+    "## No built-in (useful) arrays in Python\n",
     "\n",
     "- More flexible *lists* are built-in.\n",
     "- Array computations with [NumPy](https://numpy.org/)\n",
@@ -343,7 +343,7 @@
     }
    },
    "source": [
-    "### Mathematical functions in NumPy\n",
+    "## Mathematical functions in NumPy\n",
     "\n",
     "- Python's built-in `math` module is limited in functionality.\n",
     "- [NumPy](https://numpy.org) has many more mathematical functions and constants."
@@ -375,7 +375,7 @@
     "tags": []
    },
    "source": [
-    "### Indexing arrays (lists, ...) works differently in Python\n",
+    "## Indexing arrays (lists, ...) works differently in Python\n",
     "\n",
     "- Square brackets for indexing.\n",
     "- Indexes start counting from zero: `a[0]` is the first element.\n",
@@ -410,7 +410,7 @@
     }
    },
    "source": [
-    "### Functions have a different syntax in Python\n",
+    "## Functions have a different syntax in Python\n",
     "\n",
     "- Again, no `end` in Python\n",
     "- A colon on each line before indentation.\n",
@@ -460,7 +460,7 @@
     "tags": []
    },
    "source": [
-    "### In many ways, Python is more flexible.\n",
+    "## In many ways, Python is more flexible.\n",
     "\n",
     "Example: `dict` and `set` types"
    ]
@@ -507,7 +507,7 @@
     }
    },
    "source": [
-    "### Computational libraries are not built-in to Python\n",
+    "## Computational libraries are not built-in to Python\n",
     "\n",
     "A few popular open source tools for computational science in Python:\n",
     "\n",
@@ -563,7 +563,7 @@
     "tags": []
    },
    "source": [
-    "### Discretization time axis (see W6.4)\n",
+    "## Discretization time axis (see W6.4)\n",
     "\n",
     "<img src=\"discretization_time_axis.png\" width=\"800\" />"
    ]
@@ -578,7 +578,7 @@
     "tags": []
    },
    "source": [
-    "### Euler integration\n",
+    "## Euler integration\n",
     "\n",
     "**Given:** state at time step $i$: $y_i$ and $v_{y,i}$\n",
     "\n",
@@ -602,7 +602,7 @@
     "tags": []
    },
    "source": [
-    "### [Leapfrog](https://en.wikipedia.org/wiki/Leapfrog_integration) integration (specific for Newton's second law)\n",
+    "## [Leapfrog](https://en.wikipedia.org/wiki/Leapfrog_integration) integration (specific for Newton's second law)\n",
     "\n",
     "**Given:** state at time step $i$: $y_i$ and $v_{y,i}$\n",
     "\n",
@@ -624,10 +624,9 @@
     }
    },
    "source": [
-    "# 4. Pendulum\n",
+    "# 4. Mass on a spring\n",
     "\n",
-    "Numerical integration of a pendulum.\n",
-    "In this demo, the pendulum only feels a gravitational force.\n",
+    "In this demo, the leapfrog algorithm is implemented for a mass on a spring, for which the analytical solution is known.\n",
     "\n",
     "For your task, you need to modify the physics (parameters, force and potential energy)."
    ]
@@ -670,13 +669,10 @@
    },
    "outputs": [],
    "source": [
-    "# You will need to change some and add more.\n",
-    "STD_GRAVITY = 9.80665\n",
-    "COULOMB_CONSTANT = 8.9875517923e9\n",
+    "# Constant for the mass-on-spring example\n",
     "MASS = 0.062\n",
-    "LENGTH = 0.80\n",
-    "MOMENT_OF_INERTIA = MASS * LENGTH**2\n",
-    "TIMESTEP = 1.79 / 50\n",
+    "FORCE_CONST = 2.5\n",
+    "TIMESTEP = 0.01\n",
     "NSTEP = 75"
    ]
   },
@@ -689,9 +685,12 @@
     }
    },
    "source": [
-    "The following cell implements the torque function and the Leapfrog integrator.\n",
+    "The following cell implements the force function and the Leapfrog integrator.\n",
     "\n",
-    "The last line calls the integrator function, computes the trajectory, and stores the results in two arrays: `thetas` and `omegas`."
+    "The last line calls the integrator function, computes the trajectory, and stores the results in two arrays: \n",
+    "\n",
+    "- `xs`: positions on axis-axis.\n",
+    "- `vs`: horizontal velocity components."
    ]
   },
   {
@@ -705,48 +704,45 @@
    },
    "outputs": [],
    "source": [
-    "def torque_theta(theta):\n",
-    "    result = -MASS * STD_GRAVITY * LENGTH * np.sin(theta)\n",
-    "    # You can add more contributions to the torque with:\n",
-    "    # result += ...\n",
-    "    return result\n",
+    "def force(x):\n",
+    "    return -FORCE_CONST * x\n",
     "\n",
     "\n",
-    "def integrate(nstep, theta, omega):\n",
+    "def integrate(nstep, x, v):\n",
     "    # Initialize arrays with the trajectory\n",
     "    # of theta and omega.\n",
-    "    thetas = np.zeros(nstep + 1)\n",
-    "    omegas = np.zeros(nstep + 1)\n",
-    "    thetas[0] = theta\n",
-    "    omegas[0] = omega\n",
+    "    xs = np.zeros(nstep + 1)\n",
+    "    vs = np.zeros(nstep + 1)\n",
+    "    xs[0] = x\n",
+    "    vs[0] = v\n",
     "\n",
-    "    # ang_accel is the angular acceleration,\n",
-    "    # i.e. time direvative of omega.\n",
-    "    ang_accel = torque_theta(theta) / MOMENT_OF_INERTIA\n",
+    "    a = force(x) / MASS\n",
     "    for istep in range(1, nstep + 1):\n",
     "        # Leapfrog algorithm for a single step.\n",
     "        # The suffixes mean the following:\n",
     "        # _half: value half a time step further.\n",
     "        # _next: value at the next time step.\n",
-    "        omega_half = omega + TIMESTEP * ang_accel / 2\n",
-    "        theta_next = theta + TIMESTEP * omega_half\n",
-    "        ang_accel_next = torque_theta(theta_next) / MOMENT_OF_INERTIA\n",
-    "        omega_next = omega_half + TIMESTEP * ang_accel_next / 2\n",
+    "        v_half = v + TIMESTEP * a / 2\n",
+    "        x_next = x + TIMESTEP * v_half\n",
+    "        a_next = force(x_next) / MASS\n",
+    "        v_next = v_half + TIMESTEP * a_next / 2\n",
     "\n",
     "        # Store results.\n",
-    "        thetas[istep] = theta_next\n",
-    "        omegas[istep] = omega_next\n",
+    "        xs[istep] = x_next\n",
+    "        vs[istep] = v_next\n",
     "\n",
     "        # Move \"next\" results to current.\n",
-    "        theta = theta_next\n",
-    "        omega = omega_next\n",
-    "        ang_accel = ang_accel_next\n",
+    "        x = x_next\n",
+    "        v = v_next\n",
+    "        a = a_next\n",
     "\n",
     "    # Return the arrays.\n",
-    "    return thetas, omegas\n",
+    "    return xs, vs\n",
     "\n",
     "\n",
-    "thetas, omegas = integrate(NSTEP, np.pi / 3, 0.0)"
+    "xs, vs = integrate(NSTEP, 0.3, 0.0)\n",
+    "print(f\"x_i:       {xs[0]:6.3f}\")\n",
+    "print(f\"x_f - x_i: {xs[-1] - xs[0]:6.3f}\")"
    ]
   },
   {
@@ -759,10 +755,9 @@
    },
    "source": [
     "The following cell implements functions for potential and kinetic energies.\n",
-    "It also makes a plot of $\\theta$, $\\omega$ and the energies as function of time.\n",
+    "It also makes a plot of $x$, $v$ and the energies as function of time.\n",
     "\n",
-    "When you modify the `torque_theta` function,\n",
-    "corresponding changes are needed in the `potential_energy` function."
+    "You need to adjust the `potential_energy` and `kinetic_energy` functions."
    ]
   },
   {
@@ -776,35 +771,30 @@
    },
    "outputs": [],
    "source": [
-    "def potential_energy(theta):\n",
-    "    result = MASS * STD_GRAVITY * LENGTH * (1 - np.cos(theta))\n",
-    "    # You can add more contributions with:\n",
-    "    # result += ...\n",
-    "    return result\n",
+    "def potential_energy(x):\n",
+    "    return 0.5 * FORCE_CONST * x**2\n",
     "\n",
     "\n",
-    "def kinetic_energy(omega):\n",
-    "    return MOMENT_OF_INERTIA * omega**2 / 2\n",
+    "def kinetic_energy(v):\n",
+    "    return MASS * v**2 / 2\n",
     "\n",
     "\n",
-    "def plot_all(thetas, omegas):\n",
-    "    ts = np.arange(len(thetas)) * TIMESTEP\n",
+    "def plot_trajectory(xs, cs):\n",
+    "    ts = np.arange(len(xs)) * TIMESTEP\n",
     "\n",
     "    def plot_theta(ax):\n",
-    "        ax.plot(ts, thetas)\n",
+    "        ax.plot(ts, xs)\n",
     "        ax.set_xlabel(\"time $t$ [s]\")\n",
-    "        ax.set_ylabel(r\"Angle $\\theta$ [rad]\")\n",
-    "        ax.set_yticks([-np.pi, -np.pi / 2, 0, np.pi / 2, np.pi])\n",
-    "        ax.set_yticklabels([r\"$-\\pi$\", r\"$-\\pi/2$\", \"0\", r\"$\\pi/2$\", r\"$\\pi$\"])\n",
+    "        ax.set_ylabel(r\"$x$ [m]\")\n",
     "\n",
     "    def plot_omega(ax):\n",
-    "        ax.plot(ts, omegas)\n",
+    "        ax.plot(ts, vs)\n",
     "        ax.set_xlabel(\"time $t$ [s]\")\n",
-    "        ax.set_ylabel(r\"Angular velocity $\\omega$ [rad/s]\")\n",
+    "        ax.set_ylabel(r\"$v$ [m/s]\")\n",
     "\n",
     "    def plot_energy(ax):\n",
-    "        eps = potential_energy(thetas)\n",
-    "        eks = kinetic_energy(omegas)\n",
+    "        eps = potential_energy(xs)\n",
+    "        eks = kinetic_energy(vs)\n",
     "        ax.plot(ts, eps, \"C0-\", label=r\"$E_\\mathrm{pot}$\")\n",
     "        ax.plot(ts, eks, \"C1-\", label=r\"$E_\\mathrm{kin}$\")\n",
     "        ax.plot(ts, eks + eps, \"k-\", label=r\"$E_\\mathrm{total}$\")\n",
@@ -821,7 +811,7 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "plot_all(thetas, omegas)"
+    "plot_trajectory(xs, vs)"
    ]
   },
   {
@@ -847,17 +837,17 @@
    },
    "outputs": [],
    "source": [
-    "def plot_omega_theta():\n",
-    "    plt.close(\"omega_theta\")\n",
-    "    fig, ax = plt.subplots(figsize=(8, 5), num=\"omega_theta\")\n",
-    "    ax.plot(thetas, omegas)\n",
-    "    ax.set_xlabel(r\"Angle $\\theta$ [rad]\")\n",
-    "    ax.set_ylabel(r\"Angular velocity $\\omega$ [rad/s]\")\n",
+    "def plot_x_v(xs, vs):\n",
+    "    plt.close(\"x_v\")\n",
+    "    fig, ax = plt.subplots(figsize=(8, 5), num=\"x_v\")\n",
+    "    ax.plot(xs, vs)\n",
+    "    ax.set_xlabel(r\"$x$ [m]\")\n",
+    "    ax.set_ylabel(r\"$v$ [m/s]\")\n",
     "    fig.tight_layout()\n",
     "    plt.show()\n",
     "\n",
     "\n",
-    "plot_omega_theta()"
+    "plot_x_v(xs, vs)"
    ]
   },
   {
@@ -878,23 +868,23 @@
     "    return low - margin, high + margin\n",
     "\n",
     "\n",
-    "def plot_contour_energy():\n",
-    "    theta_grid, omega_grid = np.meshgrid(\n",
-    "        np.linspace(*range_with_margin(thetas), 101),\n",
-    "        np.linspace(*range_with_margin(omegas), 51),\n",
+    "def plot_contour_energy(xs, vs):\n",
+    "    x_grid, v_grid = np.meshgrid(\n",
+    "        np.linspace(*range_with_margin(xs), 101),\n",
+    "        np.linspace(*range_with_margin(vs), 51),\n",
     "    )\n",
-    "    energy_grid = kinetic_energy(omega_grid) + potential_energy(theta_grid)\n",
+    "    energy_grid = kinetic_energy(v_grid) + potential_energy(x_grid)\n",
     "    plt.close(\"contour\")\n",
     "    fig, ax = plt.subplots(figsize=(8, 5), num=\"contour\")\n",
-    "    con = plt.contour(theta_grid, omega_grid, energy_grid, 40, cmap=\"hot\")\n",
-    "    ax.set_xlabel(r\"Angle $\\theta$ [rad]\")\n",
-    "    ax.set_ylabel(r\"Angular velocity $\\omega$ [rad/s]\")\n",
-    "    fig.colorbar(con, label=\"Total energy [joule]\")\n",
+    "    con = plt.contour(x_grid, v_grid, energy_grid, 40, cmap=\"hot\")\n",
+    "    ax.set_xlabel(r\"$x$ [m]\")\n",
+    "    ax.set_ylabel(r\"$v$ [m/s]\")\n",
+    "    fig.colorbar(con, label=\"Total energy [J]\")\n",
     "    fig.tight_layout()\n",
     "    plt.show()\n",
     "\n",
     "\n",
-    "plot_contour_energy()"
+    "plot_contour_energy(xs, vs)"
    ]
   }
  ],
